--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -536,12 +536,13 @@ npc:
   - content: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
   - title: Legendary Actions
   - content: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
+  - abilities:
     - title: Devil's Portal
     - content: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
     - title: Cantrips
     - content: Anastasia Dumas casts a cantrip
     - title: Family Reserve
-    - content: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
+    - content: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight  
 
   attacks: |
     Spellcasting
