--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -292,8 +292,8 @@ npc:
     # 0 o more.  (I.e. optional, but most characters speak at least 1.)
     #
     languages:
-    - Common,
-    - Abyssal,
+    - Common
+    - Abyssal
     - Draconic
 
     #
@@ -342,7 +342,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: A withered elderly woman glares across the courtyard, "Have you decided to join our little family, dearies?"
+    introduction: A withered elderly woman glares across the courtyard, /"Have you decided to join our little family, dearies?/"
 
     #
     # Appearance: a brief content of the character skin, clothes, hair, eyes, etc.
@@ -404,7 +404,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Dark Magic, Revenge
+      Dark Magic
      
     #
     # Vulnerabilities:
@@ -449,20 +449,20 @@ npc:
   specialties:
     saving-throws:
     - Constitution
-    - Intelligence
+    - Strength
     damage-immunities:
-    - Necrotic
+    - N/A
     condition-immunities:
-    - Sleep and Charm Magic
+    - N/A
     resistances:
-    - Cold and Fire
+    - N/A
     skills:
-    - Tailoring & Leatherworking
+    - Masonry
     proficiencies: 
     - Intimidation
     - Persuasion
-    - Tailor's Tools
-    - Leatherworker's Tools
+    - Mason's Tools
+    - Woodcrafter's Tools
   special-abilities: 
   - title: Sorcerer Spellcasting
   - abilities: 
@@ -514,22 +514,23 @@ npc:
     - title: Strength of the Grave
     - content: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
                reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
-    - title: Hound of Ill Omen
-    - content: You gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
-               The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
-               It appears with a number of temporary hit points equal to half your sorcerer level.
-               It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
-               At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
-               The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
-               can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
-               disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
-    - title: Shadow Walk
-    - content: You gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
-               light or darkness.
-    - title: Umbral Form
-    - content: You can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
-               creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
-               die, or if you dismiss it as a bonus action.
+  - title: Hound of Ill Omen
+  - content: You gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
+  - abilities:
+    - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
+    - It appears with a number of temporary hit points equal to half your sorcerer level.
+    - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
+    - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
+    - The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
+      can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
+      disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
+  - title: Shadow walk
+  - content: You gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
+             light or darkness.
+  - title: Umbral form
+  - content: You can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
+             creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
+             die, or if you dismiss it as a bonus action.
   - title: Shadow Sorcerer Quirks 
   - content: When you are asleep, you don't appear to breathe (though you must still breathe to survive).
   - title: Legendary Resistance
@@ -537,12 +538,12 @@ npc:
   - title: Legendary Actions
   - content: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
   - abilities:
-    - title: Devil's Portal
+    - title: devils portal
     - content: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
-    - title: Cantrips
+    - title: cantrips
     - content: Anastasia Dumas casts a cantrip
-    - title: Family Reserve
-    - content: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family or minor devils to join the fight  
+    - title: family reserve
+    - content: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
 
   attacks: |
     Spellcasting
@@ -551,14 +552,13 @@ npc:
     Prefers to let her family do her fighting for her but is an exceedingly powerful spellcaster if it comes to it 
      
   special-equipment:
-    - title: Ring of Evasion
-    - content: This ring has 3 Charges, and it regains 1d3 expended Charges daily at dawn. When you fail a Dexterity saving throw while wearing it, you can use your Reaction to expend 1 of its Charges to succeed on that saving throw instead.
-    - title: Ring of Spell Turning
-    - content: While wearing this ring, you have advantage on saving throws against any spell that targets only you (not in an area of effect). In addition, if you roll a 20 for the save and the spell is 7th level or lower, the spell has no effect on you and instead targets the caster, using the slot level, spell save DC, attack bonus, and spellcasting ability of the caster.
-    - title: Ring of Regeneration
-    - content: While wearing this ring, you regain 1d6 Hit Points every 10 minutes, provided that you have at least 1 hit point. If you lose a body part, the ring causes the missing part to regrow and return to full functionality after 1d6 + 1 days if you have at least 1 hit point the whole time.
-    - title: Amulet of the Planes
-    - content: While wearing this ring, you regain 1d6 Hit Points every 10 minutes, provided that you have at least 1 hit point. If you lose a body part, the ring causes the missing part to regrow and return to full functionality after 1d6 + 1 days if you have at least 1 hit point the whole time.
+  - title: Ring of Evasion
+  - content:
+  - title: Ring of Spell Turning
+  - content:
+  - title: Ring of Regeneration
+  - content:
+  - title: Amulet of the Planes
 
   profile:
 
@@ -582,7 +582,7 @@ npc:
       sacrificial rites to her patron herself. She spends more and more time in a fugue state communing with her patron and less and less time in lucidity. 
       She is capable of great feats of magic but will almost never engage in extended combat. If she can't immediately dispatch her eneies within or before the 
       first round of combat, she will summon and allow her family to do her fighting for her and use her magic to make her escape as quickly as possible. It is
-      unclear what her or her patron's endgame is beyond the accumulation of power and the devouring of souls, but there's no way it's good for anyone.
+      unclear what her or her patron's endgame is beyond the accumulation of power and the devouring of souls, but theres no way it's good for anyone.
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -592,10 +592,10 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Anastasia was once a fairly regular woman, perhaps a little bit rude, snobby and condescending, with a minor talen for sorcery, but nothing too exceptional. Her husband's murder at the
+      Anastasia was once a fairly regular woman, perhaps a little bit rude, snobby and condescending, but nothing too exceptional. Her husband's murder at the
       hands of his business rivals, left her a broken, vengeful and angry woman. Feeling helpless to get revenge on her own, she sought out ancient rites and 
-      made a pact with a greater devil to boost her sorcery far beyond its original levels. Cold, calculating and shrewed, one by one she sent her enemies souls to her patron. 
-      By the time she had exacted her revenge the lust for power had overcome her. As the years went by and she grew her family, she became more and more cruel
+      made a pact with a greater devil to give herself the powers she needed. Cold, calculating and shrewed, one by one she sent her enemies souls to her patron. 
+      By the time she had exacted her revenge the kust for power had overcome her. As the years went by and she grew her family, she became more and more cruel
       vicious and wrathful. The more time she spent communing with her patron, the less of a grip she continued to hold on reality and is now quite mad. 
       Despite her madnees and her infirmity, she is still very capable, cunning and intelligent. She rules her family with an iron fist and will tolerate no
       failure from her descendants or followers. She is manuipulative, and will often play members of her family against each other to get the outcome she wants.
